--- a/.github/workflows/main_mariodemo.yml
+++ b/.github/workflows/main_mariodemo.yml
@@ -15,12 +15,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
 
+      - name: Sample Azure action
+        with:
+          credentials: ${{ secrets.AZURE_CREDENTIALS }}
+        env:
+          credentials: ${{ secrets.AZURE_CREDENTIALS }}
       - name: npm install, build, and test
         run: |
           npm install
@@ -32,6 +36,7 @@ jobs:
         with:
           name: node-app
           path: .
+      
 
   deploy:
     runs-on: ubuntu-latest
