--- a/.github/workflows/main_mariodemo.yml
+++ b/.github/workflows/main_mariodemo.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ secrets.TESTING }}
       - uses: actions/checkout@v2
 
       - name: Set up Node.js version
