--- a/.github/workflows/main_mariodemo.yml
+++ b/.github/workflows/main_mariodemo.yml
@@ -17,6 +17,9 @@ jobs:
       - uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - run: |
+          az webapp list --query "[?state=='Running']"
       - uses: actions/checkout@v2
 
       - name: Set up Node.js version
