--- a/.github/workflows/main_mariodemo.yml
+++ b/.github/workflows/main_mariodemo.yml
@@ -14,9 +14,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: azure/login@v1
+      - name: Sample Azure action
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          credentials: ${{ secrets.AZURE_CREDENTIALS }}
+        env:
+          credentials: ${{ secrets.AZURE_CREDENTIALS }}
 
       - run: |
           az webapp list --query "[?state=='Running']"
