--- a/.github/workflows/main_mariodemo.yml
+++ b/.github/workflows/main_mariodemo.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Sample Azure action
+      - uses: azure/login@v1
         with:
           credentials: ${{ secrets.AZURE_CREDENTIALS }}
         env:
