--- a/.github/workflows/main_mariodemo.yml
+++ b/.github/workflows/main_mariodemo.yml
@@ -16,9 +16,9 @@ jobs:
     steps:
       - uses: azure/login@v1
         with:
-          credentials: ${{ secrets.AZURE_CREDENTIALS }}
-        env:
-          credentials: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+        env: # Or as an environment variable
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - run: |
           az webapp list --query "[?state=='Running']"
