--- a/.github/workflows/main_mariodemo.yml
+++ b/.github/workflows/main_mariodemo.yml
@@ -54,6 +54,11 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
+      - uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+        env: # Or as an environment variable
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
